--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^0.19.0",
     "native-base": "^2.13.8",
     "react": "16.9.0",
+    "react-content-loader": "^4.3.2",
     "react-native": "0.61.5",
     "react-native-bootsplash": "^1.0.3",
     "react-native-gesture-handler": "^1.5.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-svg": "^9.13.3",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3"
