--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-native-bootsplash": "^1.0.3",
     "react-native-fast-image": "^7.0.2",
     "react-native-gesture-handler": "^1.5.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-svg": "^9.13.3",
+    "react-native-youtube": "^2.0.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3"
