--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-youtube": "^2.0.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
