--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "jetifier -r"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.3",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
@@ -28,7 +29,10 @@
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.6.0"
+    "react-navigation-tabs": "^2.6.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
