See file CHANGELOG.md 2019-03-12 23:00

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,8 @@ target 'Challenge' do
 
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
+  pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
+
   target 'ChallengeTests' do
     inherit! :search_paths
     # Pods for testing
